# n-armed-bandits

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: exercise_two_four.py  fig_two_five.py  fig_two_four.py  fig_two_one.py  fig_two_three.py  fig_two_two.py
src/n_armed_bandits/agents/: __init__.py  base.py  epsilon_greedy.py  gradient.py  ucb.py
src/n_armed_bandits/api/: app.py  utils.py
src/n_armed_bandits/api/static/css/: styles.css
src/n_armed_bandits/api/templates/: index.html  test.html
src/n_armed_bandits/envs/: __init__.py  n_armed_testbed.py  nonstationary_testbed.py
src/n_armed_bandits/policies/: __init__.py  epsilon.py  softmax.py  ucb.py
src/n_armed_bandits/updates/: __init__.py  exponential_recency_weighted_average.py  gradient_pref.py  sample_average.py
src/tests/: test_epsilon_greedy.py
