[project]
name = "n-armed-bandits"
version = "0.1.0"
description = "n-armed bandits algorithm + simulation app"
authors = [
    {name = "MouseTrap-codes",email = "mousetrapcodes@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.11"
mypy = "^1.17.1"
pytest = "0"
pre-commit = "^4.3.0"
black = "^25.1.0"
isort = "^6.0.1"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
